--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<HTML>
-<BODY>
-  
-Hello there, awesome person!
-  
-</BODY>
-</HTML>
+<html>
+    <body>
+        The HTML content goes here.
+    </body>
+</html>
